[gd_scene load_steps=3 format=3 uid="uid://contc4ufdbhsg"]

[ext_resource type="Script" path="res://Arrow/Abilities/Fire/Burn/burn_effect.gd" id="1_dc1pm"]
[ext_resource type="PackedScene" uid="uid://brk7aduilhemr" path="res://Effects/Burn/BurningEffect.tscn" id="3_jh66r"]

[node name="BurnEffect" type="Node2D"]
script = ExtResource("1_dc1pm")
burn_color = Color(0.631373, 0, 0, 1)
effect_id = 3

[node name="BurnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="BurningEffect" parent="." instance=ExtResource("3_jh66r")]
z_index = -1
scale = Vector2(0.5, 0.5)
preprocess = 0.3

[node name="BurnTick" type="Timer" parent="."]
wait_time = 0.5
